// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review wrapper component renders properly if a delete handler is provided 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen"
    >
      <React.Fragment>
        |
        <Button
          onClick={[MockFunction]}
          size="small"
          type="button"
          variation="transparent"
        >
          Remove
        </Button>
      </React.Fragment>
    </div>
  }
  editText="Edit"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if an edit handler is supplied 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen"
    >
      <Button
        onClick={[Function]}
        size="small"
        type="button"
        variation="transparent"
      >
        Edit
      </Button>
    </div>
  }
  editText="Edit"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if only the required props are set 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen"
    />
  }
  editText="Edit"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if the edit link and edit handler are both omitted 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen"
    />
  }
  editText="Edit"
>
  Hello
</Review>
`;

exports[`Review wrapper component renders properly if the edit link is set 1`] = `
<Review
  editContent={
    <div
      className="nowrap visibility--screen"
    >
      <Button
        onClick={[Function]}
        size="small"
        type="button"
        variation="transparent"
      >
        <a
          href="something"
        >
          Edit
        </a>
      </Button>
    </div>
  }
  editText="Edit"
>
  Hello
</Review>
`;
